--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,14 @@
 [Identifiers]
-ClientID=811570721138147329
+ClientID=youridofclient
 
 [State]
-PartyID=ae488379-351d-4a4f-ad32-2b9b01c91657
-PartySize=2
-PartyMax=999
-JoinSecret=https://discord.gg/hzqnvPeF2S
-State=https://discord.gg/hzqnvPeF2S
-Details=Développe le Faction
+State=yourstatus
+Details=yourstatusv2
 StartTimestamp=1507665886
 EndTimestamp=1507665886
 
 [Images]
-LargeImage=logo
-LargeImageTooltip=Saloria v1 BIENTOT
-SmallImage=logo
-SmallImageTooltip=Saloria COPYRIGHT
+LargeImage=imagelarge
+LargeImageTooltip=descimagelarge
+SmallImage=imagesmall
+SmallImageTooltip=descimagesmall
